# history_mover

./: .gitignore  .sonarcloud.properties  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  hacs.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  test.yml
custom_components/history_mover/: __init__.py  config_flow.py  const.py  db.py  manifest.json  mover.py  purger.py  references.py  services.py  services.yaml  strings.json
custom_components/history_mover/translations/: de.json  en.json
docs/: actions.md  internals.md
support/: render.sh
tests/: __init__.py  common.py  conftest.py  test_init.py  test_mover.py  test_options_flow.py  test_purger.py  test_references.py  test_service.py
